=======================================
 Release notes for PyTables 3.1 series
=======================================

:Author: PyTables Developers
:Contact: pytables@googlemail.com

.. py:currentmodule:: tables


Changes from 3.1.0 to 3.1.1
===========================

Improvements
------------

- Do not create a temporary array when the *obj* parameter is not specified
  in :meth:`File.create_array` (thanks to Francesc).
  Closes :issue:`337` and :issue:`339`).
- Added two new utility functions
  (:func:`tables.nodes.filenode.read_from_filenode` and
  :func:`tables.nodes.filenode.save_to_filenode`) for the direct copy from
  filesystem to filenode and vice versa (closes :issue:`342`).
  Thanks to Andreas Hilboll.
- The internal Blosc_ library has been updated to version 1.3.5.
- Removed the :file:`examples/nested-iter.py` considered no longer useful.
  Closes :issue:`343`.


Changes from 3.0 to 3.1.0
=========================

New features
------------

- Now PyTables is able to save/restore the default value of :class:`EnumAtom`
  types (closes :issue:`234`).
- Implemented support for the H5FD_SPLIT driver (closes :issue:`288`,
  :issue:`289` and :issue:`295`). Many thanks to simleo.
- New quantization filter: the filter truncates floating point data to a
  specified precision before writing to disk. This can significantly improve
  the performance of compressors (closes :issue:`261`).
  Thanks to Andreas Hilboll.
- Added new :meth:`VLArray.get_row_size` method to :class:`VLArray` for
  querying the number of atoms of a :class:`VLArray` row.
  Closes :issue:`24` and :issue:`315`.
- The internal Blosc_ library has been updated to version 1.3.2.
  All new features introduced in the Blosc_ 1.3.x series, and in particular
  the ability to leverage different compressors within Blosc_ (see the `Blosc
  Release Notes`_), are now available in PyTables via the blosc filter
  (closes: :issue:`324`). A big thank you to Francesc.


Improvements
------------
